# annonet

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  annonet.cpp  annonet.h  annonet_cpu.sln  annonet_cuda.sln  annonet_infer.cpp  annonet_infer.h  annonet_infer_cpu.vcxproj  annonet_infer_cpu.vcxproj.filters  annonet_infer_cuda.vcxproj  annonet_infer_cuda.vcxproj.filters  annonet_infer_main.cpp  annonet_parse_anno_classes.cpp  annonet_parse_anno_classes.h  annonet_train.cpp  annonet_train.h  annonet_train_cpu.vcxproj  annonet_train_cpu.vcxproj.filters  annonet_train_cuda.vcxproj  annonet_train_cuda.vcxproj.filters  annonet_train_main.cpp  appveyor.yml  find_max_mini-batch_size.cmd
example-images/balloons/anno/: 190324-balloons1.jpg_annotation_paths.json  190324-balloons1.jpg_result_path.json  anno_classes.json
test/: annonet_test.cpp  annonet_test_cpu.vcxproj  annonet_test_cpu.vcxproj.filters
